force-app/main/default/objects/Fixed_Pricing1__c/fields/Added_On__c.field-meta.xml
<CustomField>
    <fullName>Added_On__c</fullName>
    <label>Added On</label>
    <length>50</length>
    <type>Text</type>
</CustomField>