force-app/main/default/objects/Fixed_Pricing1__c/fields/Aggregated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Aggregated_Revenue__c</fullName>
    <label>Aggregated Revenue</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>