force-app/main/default/objects/Fixed_Pricing1__c/fields/Aggregation_Period__c.field-meta.xml
<CustomField>
    <fullName>Aggregation_Period__c</fullName>
    <label>Aggregation Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>