force-app/main/default/objects/Fixed_Pricing1__c/fields/Aggregation_Required__c.field-meta.xml
<CustomField>
    <fullName>Aggregation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aggregation Required</label>
    <type>Checkbox</type>
</CustomField>