force-app/main/default/objects/Fixed_Pricing1__c/fields/Bearer_of_Charges__c.field-meta.xml
<CustomField>
    <fullName>Bearer_of_Charges__c</fullName>
    <label>Bearer of Charges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>