force-app/main/default/objects/Fixed_Pricing1__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <defaultValue>&apos;1&apos;</defaultValue>
    <label>Client Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>