force-app/main/default/objects/Fixed_Pricing1__c/fields/Commercial__c.field-meta.xml
<CustomField>
    <fullName>Commercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial</label>
    <referenceTo>Commercial2__c</referenceTo>
    <relationshipLabel>Fixed Pricings</relationshipLabel>
    <relationshipName>Fixed_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>