force-app/main/default/objects/Fixed_Pricing1__c/fields/Count_Slab_Value__c.field-meta.xml
<CustomField>
    <fullName>Count_Slab_Value__c</fullName>
    <label>Count Slab Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>