force-app/main/default/objects/Fixed_Pricing1__c/fields/Debit_Model__c.field-meta.xml
<CustomField>
    <fullName>Debit_Model__c</fullName>
    <label>Debit Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net</fullName>
            </value>
            <value>
                <fullName>Gross</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>