force-app/main/default/objects/Fixed_Pricing1__c/fields/Fee_Bearer_Entity__c.field-meta.xml
<CustomField>
    <fullName>Fee_Bearer_Entity__c</fullName>
    <label>Fee Bearer Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>