force-app/main/default/objects/Fixed_Pricing1__c/fields/Fee_Bearer_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Fee_Bearer_Entity_Id__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fee Bearer Entity Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>