force-app/main/default/objects/Fixed_Pricing1__c/fields/Flat_Fee__c.field-meta.xml
<CustomField>
    <fullName>Flat_Fee__c</fullName>
    <label>Flat Fee</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>