force-app/main/default/objects/Fixed_Pricing1__c/fields/From_Time__c.field-meta.xml
<CustomField>
    <fullName>From_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <label>From Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>