force-app/main/default/objects/Fixed_Pricing1__c/fields/GmvSlabValue__c.field-meta.xml
<CustomField>
    <fullName>GmvSlabValue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GMV Slab Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>