force-app/main/default/objects/Fixed_Pricing1__c/fields/Max_Cap_TDR_Charge__c.field-meta.xml
<CustomField>
    <fullName>Max_Cap_TDR_Charge__c</fullName>
    <label>Max Cap TDR Charge</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>