force-app/main/default/objects/Fixed_Pricing1__c/fields/MID__c.field-meta.xml
<CustomField>
    <fullName>MID__c</fullName>
    <formula>Commercial__r.Merchant_MID__c</formula>
    <label>MID</label>
    <type>Text</type>
</CustomField>