force-app/main/default/objects/Fixed_Pricing1__c/fields/Min_Cap_TDR_Charge__c.field-meta.xml
<CustomField>
    <fullName>Min_Cap_TDR_Charge__c</fullName>
    <label>Min Cap TDR Charge</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>