force-app/main/default/objects/Fixed_Pricing1__c/fields/Need_to_Publish__c.field-meta.xml
<CustomField>
    <fullName>Need_to_Publish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need to Publish</label>
    <type>Checkbox</type>
</CustomField>