force-app/main/default/objects/Fixed_Pricing1__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <formula>CASESAFEID(Commercial__r.Opportunity__c)</formula>
    <label>OpportunityId</label>
    <type>Text</type>
</CustomField>