force-app/main/default/objects/Fixed_Pricing1__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Percentage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>