force-app/main/default/objects/Fixed_Pricing1__c/fields/Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>Rule_Id__c</fullName>
    <externalId>true</externalId>
    <label>Rule Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>