force-app/main/default/objects/Fixed_Pricing1__c/fields/Shared_Fee__c.field-meta.xml
<CustomField>
    <fullName>Shared_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Shared Fee</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>