force-app/main/default/objects/Fixed_Pricing1__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <defaultValue>&apos;Salesforce&apos;</defaultValue>
    <label>Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>