force-app/main/default/objects/Fixed_Pricing1__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved (Awaiting Publishing)</fullName>
            </value>
            <value>
                <fullName>Pending with Checker</fullName>
            </value>
            <value>
                <fullName>Checker Rejected</fullName>
            </value>
            <value>
                <fullName>Checker Approved</fullName>
            </value>
            <value>
                <fullName>Error (Override Required)</fullName>
            </value>
            <value>
                <fullName>Error (Override Not Required)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>