force-app/main/default/objects/Fixed_Pricing1__c/fields/Sub_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Sub_Client_Id__c</fullName>
    <label>Sub Client Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>