force-app/main/default/objects/Fixed_Pricing1__c/fields/Temp_Id__c.field-meta.xml
<CustomField>
    <fullName>Temp_Id__c</fullName>
    <label>Temp Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>