force-app/main/default/objects/Fixed_Pricing1__c/fields/Till_Time__c.field-meta.xml
<CustomField>
    <fullName>Till_Time__c</fullName>
    <defaultValue>2359</defaultValue>
    <label>Till Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>