force-app/main/default/objects/Fixed_Pricing1__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <label>Valid From</label>
    <length>30</length>
    <type>Text</type>
</CustomField>