force-app/main/default/objects/Fixed_Pricing1__c/fields/Valid_Till__c.field-meta.xml
<CustomField>
    <fullName>Valid_Till__c</fullName>
    <label>Valid Till</label>
    <length>30</length>
    <type>Text</type>
</CustomField>